# Template-for-Catch-and-CMake

./: CMakeLists.txt  README.md  my_awesome_test.cpp
tests/: my_awesome_test.cpp
